feat: add javadoc and fix bug